# dtu_mlops_fork

s1_development_environment/exercise_files/: 1_Tensors_in_PyTorch.ipynb  2_Neural_Networks_in_PyTorch.ipynb  3_Training_Neural_Networks.ipynb  4_Fashion_MNIST.ipynb  5_Inference_and_Validation.ipynb  main.py  pyproject.toml
s1_development_environment/exercise_files/final_exercise/final_exercise/: data.py  main.py  model.py  trained_model.pth
s4_debugging_and_logging/exercise_files/: my_first_pro.prof  profile.txt  pytorch_profiler_test.py
