[project]
name = "s_1"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "gdown>=5.2.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "typer>=0.21.1",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
]
